# md-spreadsheet-parser

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  COOKBOOK.ja.md  COOKBOOK.md  DEVELOPMENT.md  README.ja.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish-npm.yml  publish-testpypi.yml  publish_npm.yml  tests.yml
COOKBOOK/: index.html
api/: index.html
changes/archive/1.3.0/: release_notes.txt
changes/archive/1.3.1/: release_notes.txt
docs/: api.md  index.md
ja/: index.html
ja/COOKBOOK/: index.html
ja/api/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/search/: search_index.json
src/md_spreadsheet_parser/: __init__.py  cli.py  core.py  generator.py  models.py  parsing.py  pydantic_adapter.py  schemas.py  validation.py  yaml_parser.py
tests/: test_br_conversion.py  test_code_blocks.py  test_generator.py  test_parser.py  test_schema_mismatches.py  test_sheet_metadata.py  test_validation.py  test_yaml_parser.py
tests/core/: test_generator.py  test_gfm_compliance.py  test_line_reporting.py  test_models.py  test_workbook_root_content.py
tests/features/: test_json_conversion.py  test_metadata.py  test_schema_validation.py  test_sheet_type_detection.py  test_task_list_conversion.py  test_to_markdown_new_fields.py  test_workbook_detection.py  test_workbook_line_range.py  test_yaml_integration.py
tests/fixtures/: test_data.xlsx
tests/scenarios/: test_root_marker_robustness.py
(+119 files in other folders)
