[project]
name = "md-spreadsheet-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "f-y" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=9.0.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
